Container to build toolchain has now an entry point to start automaticallation toolchain compilation

--- a/build-resources/Dockerfile.toolchain
+++ b/build-resources/Dockerfile.toolchain
@@ -11,7 +11,5 @@ RUN apt-get -y update && apt-get --fix-missing -y install \
     wget \
     bzip2
 
-#RUN cd /src/utils/dc-chain \
-#    && ./download.sh \
-#    && ./unpack.sh \
-#    && make
+COPY compile-toolchain.sh /
+ENTRYPOINT ["/compile-toolchain.sh"]
