fix docker images creation

--- a/build-resources/Dockerfile.kos
+++ b/build-resources/Dockerfile.kos
@@ -1,8 +1,8 @@
 FROM dc-toolchain:latest
 
-ADD build-resources/dc-toolchain.tar.gz /
-ADD build-resources/environ.sh /usr/local/dc/
-ADD build-resources/Makefile.kos /usr/local/dc/
+ADD dc-toolchain.tar.gz /
+ADD environ.sh /usr/local/dc/
+ADD Makefile.kos /usr/local/dc/
 
 
 
@@ -13,3 +13,6 @@ RUN apt-get -y update && apt-get --fix-missing -y install \
     libjpeg-dev \
     libpng-dev \
     libelf-dev
+
+COPY compile-kos.sh /
+ENTRYPOINT ["/compile-kos.sh"]
