--- a/build-resources/Makefile.kos
+++ b/build-resources/Makefile.kos
@@ -3,8 +3,10 @@ all:
 	make -C /src/tools/dcload-serial all install
 
 install:
-	mkdir /usr/local/dc/kos
-	mkdir /usr/local/dc/kos-ports
-	cp -r /src/kos/lib/ /usr/local/dc/kos/
-	cp -r /src/kos/addons /usr/local/dc/kos/
-	cp -r /src/kos-ports/lib /usr/local/dc/kos-ports
+	mkdir /usr/local/dc/kos/kos
+	mkdir /usr/local/dc/kos/kos-ports
+	cp -r /src/kos/lib/ /usr/local/dc/kos/kos/
+  cp -r /src/kos/include/ /usr/local/dc/kos/kos/
+	cp -r /src/kos/addons /usr/local/dc/kos/kos/
+	cp -r /src/kos-ports/lib /usr/local/dc/kos/kos-ports
+  
