--- a/build-resources/Makefile.kos
+++ b/build-resources/Makefile.kos
@@ -3,10 +3,17 @@ all:
 	make -C /src/tools/dcload-serial all install
 
 install:
-	mkdir /usr/local/dc/kos/kos
-	mkdir /usr/local/dc/kos/kos-ports
+	mkdir -p /usr/local/dc/kos/kos/utils/
+	mkdir -p /usr/local/dc/kos/kos-ports
+	cp /src/kos/environ.sh /usr/local/dc/kos/kos/
+	cp /src/kos/environ_base.sh /usr/local/dc/kos/kos/
+	cp /src/kos/environ_dreamcast.sh /usr/local/dc/kos/kos/
+	cp /src/kos/Makefile* /usr/local/dc/kos/kos/
+	cp -r /src/kos/kernel /usr/local/dc/kos/kos/
+	cp -r /src/kos/utils/gnu_wrappers /usr/local/dc/kos/kos/utils/
+	cp -r /src/kos/utils/genromfs /usr/local/dc/kos/kos/utils/
+	cp -r /src/kos/utils/bin2o /usr/local/dc/kos/kos/utils/
 	cp -r /src/kos/lib/ /usr/local/dc/kos/kos/
-  cp -r /src/kos/include/ /usr/local/dc/kos/kos/
+	cp -r /src/kos/include/ /usr/local/dc/kos/kos/
 	cp -r /src/kos/addons /usr/local/dc/kos/kos/
-	cp -r /src/kos-ports/lib /usr/local/dc/kos/kos-ports
-  
+	cp -r /src/kos-ports /usr/local/dc/kos/
