--- a/build-resources/runtime/Dockerfile
+++ b/build-resources/runtime/Dockerfile
@@ -4,6 +4,6 @@ RUN apt-get -y update && apt-get --fix-missing -y install \
    make
 
 ADD dc-toolchain.tar.gz /
-ADD kos.tar.gz /
+ADD output/kos.tar.gz /
 
 COPY environ_runtime.sh /usr/local/dc/
