Removed dependency on dc-tooclahin.tar.gz in runtime/Dockerfile

--- a/build-resources/runtime/Dockerfile
+++ b/build-resources/runtime/Dockerfile
@@ -1,9 +1,5 @@
-FROM debian:testing
+FROM dc-toolchain:latest
 
-RUN apt-get -y update && apt-get --fix-missing -y install \
-   make
-
-ADD dc-toolchain.tar.gz /
 ADD output/kos.tar.gz /
 
 COPY environ_runtime.sh /usr/local/dc/
