fixed typos in README

--- a/build-resources/runtime/Dockerfile
+++ b/build-resources/runtime/Dockerfile
@@ -2,6 +2,7 @@ FROM debian:testing
 MAINTAINER Jonathan Muller <muller.john@gmail.com>
 
 RUN apt-get -y update && apt-get --fix-missing -y install \
+    make \
     curl
 
 
@@ -15,5 +16,4 @@ RUN echo "source /usr/local/dc/environ_runtime.sh" >> /etc/bash.bashrc
 #RUN ["/bin/bash", "-c", "source /usr/local/dc/environ_runtime.sh"]
 
 ENV PATH /opt/toolchains/dc/bin:$PATH
-ENTRYPOINT []
 
