--- a/build-resources/Makefile
+++ b/build-resources/Makefile
@@ -1,12 +1,12 @@
 .PHONY: toolchain
 
 build-toolchain:
-	docker build -t dc-toolchain:latest -f ./toolchain/Dockerfile.toolchain ./toolchain
+	docker build --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') -t dc-toolchain:latest -f ./toolchain/Dockerfile.toolchain ./toolchain
 
 build-kos:
-	docker build -t dc-kos:latest -f ./kos/Dockerfile.kos ./kos
+	docker build --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') -t dc-kos:latest -f ./kos/Dockerfile.kos ./kos
 
 build-runtime:
-	docker build -t dc-dev:latest -f ./runtime/Dockerfile ./runtime
+	docker build --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') -t dc-dev:latest -f ./runtime/Dockerfile ./runtime
 
 
