--- a/build-resources/runtime/Dockerfile
+++ b/build-resources/runtime/Dockerfile
@@ -1,14 +1,18 @@
-FROM debian:testing
-MAINTAINER Jonathan Muller <muller.john@gmail.com>
+FROM debian:10
+
+LABEL maintainer="muller.john@gmail.com"
+ARG BUILD_DATE
+LABEL org.label-schema.build-date=$BUILD_DATE
 
 RUN apt-get -y update && apt-get --fix-missing -y install \
     make \
     curl
 
 
-RUN curl -sSL http://drylm.org/dl/dc-toolchain.tar.gz \
-    | tar -vxz
+#RUN curl -sSL https://drylm.org/dl/dc-toolchain.tar.gz \
+#    | tar -vxz
 
+ADD dc-toolchain.tar.gz /
 ADD output/kos.tar.gz /
 
 COPY environ_runtime.sh /usr/local/dc/
