--- a/build-resources/runtime/Dockerfile
+++ b/build-resources/runtime/Dockerfile
@@ -5,19 +5,19 @@ ARG BUILD_DATE
 LABEL org.label-schema.build-date=$BUILD_DATE
 
 RUN apt-get -y update && apt-get --fix-missing -y install \
-    make \
-    curl
-
-
-#RUN curl -sSL https://drylm.org/dl/dc-toolchain.tar.gz \
-#    | tar -vxz
+    make 
 
 ADD dc-toolchain.tar.gz /
 ADD output/kos.tar.gz /
 
 COPY environ_runtime.sh /usr/local/dc/
+COPY build.sh /src/
+
 RUN echo "source /usr/local/dc/environ_runtime.sh" >> /etc/bash.bashrc
-#RUN ["/bin/bash", "-c", "source /usr/local/dc/environ_runtime.sh"]
+
 
 ENV PATH /opt/toolchains/dc/bin:$PATH
+
+WORKDIR /src/project
+ENTRYPOINT ["/bin/sh", "-c", "/src/build.sh"]
 
