--- a/build-resources/kos/Makefile.kos
+++ b/build-resources/kos/Makefile.kos
@@ -1,5 +1,7 @@
 all:
 	make -C /src/dc/kos all kos-ports_all
+	make -C /src/dc/libs/CubicVR/dreamcast/libkglx && \
+		cp -r /src/dc/libs/CubicVR/dreamcast/libkglx/include/GL ${KOS_PORTS}/include/GLX
 	make -C /src/dc/dcload-serial all install && \
 		mv /opt/toolchains/dc/bin/dc-tool /opt/toolchains/dc/bin/dc-tool-serial
 	make TOOLINSTALLDIR=/dcload-ip -C /src/dc/dcload-ip all install && \
