dreamcker v1.4:  - added cdi4dc to build burnable cdi image (to load into a emulator for    example)  - burn rules available

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "tools/libs/CubicVR"]
 	path = tools/libs/CubicVR
 	url = git@github.com:Drylm/CubicVR.git
+[submodule "tools/img4dc"]
+	path = tools/img4dc
+	url = git@github.com:Drylm/img4dc.git
