--- a/build-resources/runtime/Dockerfile
+++ b/build-resources/runtime/Dockerfile
@@ -5,13 +5,15 @@ ARG BUILD_DATE
 LABEL org.label-schema.build-date=$BUILD_DATE
 
 RUN apt-get -y update && apt-get --fix-missing -y install \
-    make 
+    make \
+    genisoimage
 
 ADD dc-toolchain.tar.gz /
 ADD output/kos.tar.gz /
 
 COPY environ_runtime.sh /usr/local/dc/
 COPY build.sh /src/
+COPY Makefile.burn.rules /usr/local/dc/
 
 RUN echo "source /usr/local/dc/environ_runtime.sh" >> /etc/bash.bashrc
 
@@ -19,5 +21,5 @@ RUN echo "source /usr/local/dc/environ_runtime.sh" >> /etc/bash.bashrc
 ENV PATH /opt/toolchains/dc/bin:$PATH
 
 WORKDIR /src/project
-ENTRYPOINT ["/bin/sh", "-c", "/src/build.sh"]
+CMD ["/bin/sh", "-c", "/src/build.sh"]
 
